# UniHub

./: .env.example  .gitignore  Logins.txt  README.MD  app.py  make_env.py  pyproject.toml  pyrightconfig.json  requirements.txt  setup_project.py  tasks.py  temp.txt
docs/: Documentacao_Tecnica_UniHub.md  UniHub Plataforma Digital.txt  diagramaCodigo  telas.txt
migrations/versions/: a460bfd3e910_create_initial_unihub_tables.py  b1f74d8c2a30_remover_mensagens_privadas.py  c3f2a8d9b4e1_harden_status_and_message_visibility.py  c4d9e2a7b113_adicionar_redes_sociais_em_usuarios.py  f2a6c4d8e901_adicionar_contato_externo_em_moradias.py
templates/: base.html
templates/admin/: eventos.html  forum_respostas.html  forum_topicos.html  usuarios.html
templates/auth/: cadastro.html  login.html
templates/components/: logo.html  macros.html  public_footer.html  public_navbar.html
templates/eventos/: agenda.html  criar.html  detalhes.html  editar.html  index.html  meus_eventos.html
templates/forum/: criar.html  detalhes.html  editar.html  index.html  meus_posts.html
templates/layouts/: app.html  auth.html  public.html
templates/main/: configuracoes.html  home.html  index.html  notificacoes.html  perfil.html  perfil_editar.html
templates/mensagens/: index.html
templates/moradias/: anunciar.html  detalhes.html  editar.html  index.html  (+1 more)
tests/: base.py  test_auth.py  test_eventos.py  test_forum.py  test_main.py  test_mensagens.py  test_moradias.py  test_notificacoes.py  test_regras_banco.py  test_roles.py  test_usuarios.py
unihub/: config.py  options.py
(+66 files in other folders)
